By using pubsub now we are able able to write data in one componnet and show in other. Also use connectedCallBack.

--- a/force-app/main/default/lwc/lwc_componnet/lwc_componnet.html
+++ b/force-app/main/default/lwc/lwc_componnet/lwc_componnet.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card  title={cardTitle}>
-    <lightning-input label="Enter Your Name" onchange={updateTitle}></lightning-input>
+    <lightning-input label="Enter Your Name" value={textvalue} onchange={updateTitle} ></lightning-input>
     <template if:true={showRed}>
     <div style="background-color: red; padding-left:20px;" class="card" >
         {cardTitle}; 
