Creating lightning input fields

--- a/force-app/main/default/lwc/lwcLDSComponent/lwcLDSComponent.html
+++ b/force-app/main/default/lwc/lwcLDSComponent/lwcLDSComponent.html
@@ -1,3 +1,13 @@
 <template>
-    
+    <lightning-card title="Account Details">
+        <lightning-layout>
+        <lightning-layout-item size="6">
+            <lightning-card title="Create New Account">
+             <lightning-input name="AccountName" label="Enter Account Name"></lightning-input>
+             <lightning-input name="AccountName" label="Enter Account Name"></lightning-input>
+             <lightning-button lable="Create Account"></lightning-button>
+            </lightning-card>
+        </lightning-layout-item>
+        </lightning-layout>
+    </lightning-card>
 </template>
