--- a/force-app/main/default/lwc/carDetailsFormComponent1/carDetailsFormComponent1.html
+++ b/force-app/main/default/lwc/carDetailsFormComponent1/carDetailsFormComponent1.html
@@ -1,7 +1,8 @@
 <template>
     <lightning-card title="Car Details">
-
-        <h1>Hello Car</h1>
+   <lightning-input label="Car Name" onchange={handleChange}></lightning-input>
+   <lightning-input label="Car Model" onchange={handleChange}></lightning-input>
+   <lightning-combobox label="Car Type" options={}></lightning-combobox>    
     </lightning-card>
     
 </template>
